--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,7 @@
 title: Working At It
 date: 2018-08-23
 ---
+title: Working At It
 author: bcw768
 email: your-email@domain.com
 description: > # this means to ignore newlines until "baseurl:"
