--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,7 @@
----  title: "Working At It"  date: 2018-08-23  ---
+---
+title: "Working At It"  
+date: 2018-08-23  
+---
 title: Working At It
 author: bcw768
 email: your-email@domain.com
